bundle completado diseño modificado
comenzar a pasar las imagenes de las razas de perro desde el fragamento dos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="african">African</string>
     <string name="breed">Breed</string>
+    <string name="textview">TextView</string>
+
 </resources>
